Fixed cabin list item collapse and expand

--- a/root/style/bootstrapstil.css
+++ b/root/style/bootstrapstil.css
@@ -34,10 +34,10 @@
 		margin-bottom: 10px;
 	}
 	.bestillingsknapper {
-		bottom: 64px;
+		bottom: 0px;
 		width: 100%;
 		padding: 10px;
-		margin-left: 10px;
+		margin-right: 0px;
 	}
 }
 
