--- a/root/style/tekst.css
+++ b/root/style/tekst.css
@@ -183,7 +183,7 @@ margin-top: 30px;
 	padding-top: 5px;
 	padding-bottom: 10px;
 }
-#sporsmal{
+#sporsmal {
 	min-width: 100%;
 	max-width: 100%;
 	height: 100px;
@@ -191,7 +191,7 @@ margin-top: 30px;
 	color: #000;
 	margin-top: 5px;
 }
-#submit{
+#submit {
 	color: #fff;
 	width: 100%;
 	margin-top: -10px;
@@ -244,13 +244,15 @@ hr {
 	background-color: rgba(255, 255, 255, 0.1);
 }
 .bestillingsknapper {
-	width: 100%;
-	height: 34px;
-	display: inline-block;
+	width: auto;
+	float: right !important;
 	position: absolute;
 	margin-top: 10px;
 	bottom: 10px;
-	left: -10px;
+	margin-right: 10px;
+	right: 0;
+	opacity: 0;
+	display: none;
 }
 .bestillingsknapper .btn {
 	display: inline-block;
